--- a/dist_electron/package.json
+++ b/dist_electron/package.json
@@ -14,7 +14,7 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
-    "electron-acrylic-window": "^0.5.5",
+    "glasstron": "^0.0.7",
     "node-sass": "^4.14.1",
     "npm-check": "^5.9.2",
     "sass-loader": "^8.0.2",
