--- a/dist_electron/package.json
+++ b/dist_electron/package.json
@@ -13,11 +13,12 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@electron/remote": "^2.0.8",
     "core-js": "^3.6.5",
     "node-sass": "^4.14.1",
     "npm-check": "^5.9.2",
     "sass-loader": "^8.0.2",
-    "vfluentdesign": "^0.5.3",
+    "vfluentdesign": "^1.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
@@ -27,11 +28,11 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
-    "electron": "^13.0.0",
-    "electron-devtools-installer": "^3.1.0",
-    "vue-cli-plugin-electron-builder": "~2.1.1",
+    "electron": "^v24.4.0",
+    "electron-devtools-installer": "^3.2.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
